[package]
name = "ccurl"
version = "1.0.0"
authors = ["Peter <code@peter.works>"]
edition = "2021"

[[bin]]
name = "ccurl"
path = "main.rs"
bench = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"
dirs = "3.0"
whoami = "1.3.0"
chrono = "0.4.23"
anyhow = "1.0"