[package]
name = "ccurl"
version = "1.1.0"
authors = ["Peter <code@peter.works>"]
edition = "2024"

[[bin]]
name = "ccurl"
path = "main.rs"
bench = false

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
json5 = "1.3.0"
url = "2.5.7"
dirs = "6.0.0"
whoami = "1.6.1"
chrono = "0.4.42"
anyhow = "1.0.100"